Adjusting styles on filters and more - Adjusts padding in filter accordions - Adds style for blue dropdowns - Fixes margin on mini search bar - Ensures content on mobile doesn't run up to the edge of the screen

--- a/scss/components/_accordions.scss
+++ b/scss/components/_accordions.scss
@@ -29,7 +29,6 @@
 
 .accordion__content {
   border-bottom: 1px solid $primary;
-  margin-bottom: -1px;
   padding: 1rem;
 }
 
@@ -40,12 +39,14 @@
 
     &[aria-expanded='true'] {
       background-color: rgba($beige, .5);
+      border-top: 1px solid $primary;
     }
   }
 
   .accordion__content {
     background-color: rgba($beige, .5);
-    border-color: $beige;
+    border-bottom-color: $primary;
+    border-top-color: $beige;
   }
 }
 
