--- a/scss/components/_list-styles.scss
+++ b/scss/components/_list-styles.scss
@@ -20,6 +20,7 @@
     list-style-type: disc;
     margin-left: 2rem;
     padding: .5rem 0;
+    font-size: 1.6rem;
   }
 }
 
