--- a/scss/components/_search-bar.scss
+++ b/scss/components/_search-bar.scss
@@ -51,6 +51,7 @@
 
   .combo__button {
     border-radius: 0 4px 4px 0;
+    margin-top: 0;
     float: left;
     height: 3.6rem;
     width: 5.6rem;
