--- a/scss/modules/_filters.scss
+++ b/scss/modules/_filters.scss
@@ -47,8 +47,13 @@
     }
   }
 
+  .accordion__button {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
   .accordion__content {
-    padding: 1rem 2rem;
+    padding: 2rem 2rem 1rem 2rem;
   }
 }
 
@@ -122,8 +127,8 @@
 }
 
 .filters__inner {
-  padding-left: 1rem;
-  padding-right: 1rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .filter {
